--- a/2. Components/1. Starter files/ContentSection/index.html
+++ b/2. Components/1. Starter files/ContentSection/index.html
@@ -7,7 +7,19 @@
   <title>Content Section</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-
+<body class="bg-slate-800">
+  <main>
+    <section class="container mx-auto bg-gray-100 flex flex-col sm:flex-row sm:mt-20 2xl:max-h-72">
+      <img src="./ressources/venise.jpg" alt="Venise aerial photography" class="w-full object-cover h-72 flex-1 sm:w-1/2 sm:h-auto 2xl:h-auto">
+      <div class="p-10 flex-1">
+        <h1 class="text-4xl mb-4">Your next trip to Italy 🍝</h1>
+        <p class="text-lg font-thin mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo sed ut cupiditate quaerat, quidem voluptates libero placeat quam harum rem numquam ex ducimus aut, non vero enim, repudiandae quae. Soluta.</p>
+        <a class="px-4 py-3 rounded inline-flex gap-2 shadow-md bg-gradient-to-r from-red-300 to-orange-300 cursor-pointer">
+          <span>Take a ticket</span>
+          <img src="./ressources/paper-plane.svg" alt="paper plane icon" class="w-6">
+        </a>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
