:sparkles: CTA done

--- a/2. Components/1. Starter files/CTA/index.html
+++ b/2. Components/1. Starter files/CTA/index.html
@@ -8,6 +8,28 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-
+  <main>
+    <section class="p-10 bg-gradient-to-r from-sky-500 to-indigo-500">
+      <h1 class="mb-5 text-4xl text-white font-bold flex flex-col items-center">
+        <span>Join the team.</span>
+        <span>First Month is free.</span>
+      </h1>
+      <p class="text-lg text-center text-slate-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolore harum.</p>
+      <ul class="mt-8 flex gap-4 justify-center">
+        <li class="bg-slate-100 rounded-lg px-4 py-3 text-indigo-500">
+          <a href="#checkout">
+            <span class="mr-3">Checkout</span>
+            <span>✔️</span>
+          </a>
+        </li>
+        <li class="bg-slate-100 rounded-lg px-4 py-3 text-indigo-500">
+          <a href="#pricing">
+            <span class="mr-3">Pricing</span>
+            <span>🏷️</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
