--- a/2. Components/1. Starter files/ECommerceList/index.html
+++ b/2. Components/1. Starter files/ECommerceList/index.html
@@ -8,8 +8,79 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-
-
-
+  <header>
+    <nav class="p-5">
+      <ul class="flex gap-5 justify-center text-lg">
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#Shop">Shop</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="container my-6 mx-auto p-4 max-w-7xl">
+    <h1 class="mb-5 text-3xl font-thin">Most loved Mugs</h1>
+    <section class="grid grid-cols-1 gap-5 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+      <div class="shadow-lg">
+        <img src="./images/mug1.jpg" alt="Mug 1" class="h-80 w-full object-cover">
+        <div class="p-4">
+          <p class="mb-4 flex justify-between"><span>Pinky Mug</span>12$</p>
+          <button href="#addtocard" class="px-4 py-2 flex gap-2 items-center bg-gradient-to-r from-slate-400 to-slate-300 rounded shado-sm">
+            <span class="font-medium">Add to cart</span>
+            <span><img src="./images/cart.svg" alt="Cart icon" class="w-5"></span>
+          </button>
+        </div>
+      </div>
+      <div class="shadow-lg">
+        <img src="./images/mug2.jpg" alt="Mug 2" class="h-80 w-full object-cover">
+        <div class="p-4">
+          <p class="mb-4 flex justify-between"><span>Forest Mug</span>14$</p>
+          <button href="#addtocard" class="px-4 py-2 flex gap-2 items-center bg-gradient-to-r from-slate-400 to-slate-300 rounded shado-sm">
+            <span class="font-medium">Add to cart</span>
+            <span><img src="./images/cart.svg" alt="Cart icon" class="w-5"></span>
+          </button>
+        </div>
+      </div>
+      <div class="shadow-lg">
+        <img src="./images/mug3.jpg" alt="Mug 3" class="h-80 w-full object-cover">
+        <div class="p-4">
+          <p class="mb-4 flex justify-between"><span>Rustic Mug</span>10$</p>
+          <button href="#addtocard" class="px-4 py-2 flex gap-2 items-center bg-gradient-to-r from-slate-400 to-slate-300 rounded shado-sm">
+            <span class="font-medium">Add to cart</span>
+            <span><img src="./images/cart.svg" alt="Cart icon" class="w-5"></span>
+          </button>
+        </div>
+      </div>
+      <div class="shadow-lg">
+        <img src="./images/mug4.jpg" alt="Mug 4" class="h-80 w-full object-cover">
+        <div class="p-4">
+          <p class="mb-4 flex justify-between"><span>Ceramic Mug</span>14$</p>
+          <button href="#addtocard" class="px-4 py-2 flex gap-2 items-center bg-gradient-to-r from-slate-400 to-slate-300 rounded shado-sm">
+            <span class="font-medium">Add to cart</span>
+            <span><img src="./images/cart.svg" alt="Cart icon" class="w-5"></span>
+          </button>
+        </div>
+      </div>
+      <div class="shadow-lg">
+        <img src="./images/mug5.jpg" alt="Mug 5" class="h-80 w-full object-cover">
+        <div class="p-4">
+          <p class="mb-4 flex justify-between"><span>Stylish Mug</span>13$</p>
+          <button href="#addtocard" class="px-4 py-2 flex gap-2 items-center bg-gradient-to-r from-slate-400 to-slate-300 rounded shado-sm">
+            <span class="font-medium">Add to cart</span>
+            <span><img src="./images/cart.svg" alt="Cart icon" class="w-5"></span>
+          </button>
+        </div>
+      </div>
+      <div class="shadow-lg">
+        <img src="./images/mug6.jpg" alt="Mug 6" class="h-80 w-full object-cover">
+        <div class="p-4">
+          <p class="mb-4 flex justify-between"><span>Standard Mug</span>13$</p>
+          <button href="#addtocard" class="px-4 py-2 flex gap-2 items-center bg-gradient-to-r from-slate-400 to-slate-300 rounded shado-sm">
+            <span class="font-medium">Add to cart</span>
+            <span><img src="./images/cart.svg" alt="Cart icon" class="w-5"></span>
+          </button>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
