:sparkles: Pricing component done

--- a/2. Components/1. Starter files/ContentSection/index.html
+++ b/2. Components/1. Starter files/ContentSection/index.html
@@ -18,6 +18,18 @@
           <span>Take a ticket</span>
           <img src="./ressources/paper-plane.svg" alt="paper plane icon" class="w-6">
         </a>
+        <ul>
+          <li>
+            <h2>Basic</h2>
+            <p>Fill your basic needs</p>
+            <p><span>12€</span><span>/month</span></p>
+            <p>Included :</p>
+            <ul>
+              <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
+            <button>Subscribe to this plan</button>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
