--- a/2. Components/1. Starter files/Pricing/index.html
+++ b/2. Components/1. Starter files/Pricing/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gray-50">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,6 +8,108 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-
+    <main>
+      <section class="container mx-auto py-20 px-6 flex flex-col items-center gap-5">
+        <h1 class="text-5xl font-bold">Prices range</h1>
+        <hr class="w-24 h-[2px] bg-black">
+        <p class="text-center text-lg text-gray-700">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est molestias vel.</p>
+        <ul class="mt-10 flex flex-wrap justify-center gap-8">
+          <li class="flex flex-col justify-between px-6 py-3 min-h-[415px] min-w-[280px] rounded-lg ring-1 ring-gray-300 shadow-lg">
+            <div>
+              <h2 class="text-2xl font-bold">Basic</h2>
+              <p>Fill your basic needs</p>
+              <p class="mt-1">
+                <span class="text-4xl font-bold">12€</span>
+                <span>/month</span>
+              </p>
+              <p class="uppercase text-xs font-medium">Included :</p>
+              <ul class="mt-6 flex flex-col gap-3">
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+              </ul>
+            </div>
+            <button class="py-2 px-4 rounded text-slate-50 text-sm bg-slate-800 ">Subscribe to this plan</button>
+          </li>
+          <li class="flex flex-col justify-between px-6 py-3 min-h-[415px] min-w-[280px] rounded-lg ring-1 ring-gray-300 shadow-lg">
+            <div>
+              <h2 class="text-2xl font-bold">Freelance</h2>
+              <p>Go to the next level</p>
+              <p class="mt-1">
+                <span class="text-4xl font-bold">29€</span>
+                <span>/month</span>
+              </p>
+              <p class="uppercase text-xs font-medium">Included :</p>
+              <ul class="mt-6 flex flex-col gap-3">
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+              </ul>
+            </div>
+            <button class="py-2 px-4 rounded text-slate-50 text-sm bg-slate-800 ">Subscribe to this plan</button>
+          </li>
+          <li class="flex flex-col justify-between px-6 py-3 min-h-[415px] min-w-[280px] rounded-lg ring-1 ring-gray-300 shadow-lg">
+            <div>
+              <h2 class="text-2xl font-bold">Professionnal</h2>
+              <p>Enter the pro world</p>
+              <p class="mt-1">
+                <span class="text-4xl font-bold">99€</span>
+                <span>/month</span>
+              </p>
+              <p class="uppercase text-xs font-medium">Included :</p>
+              <ul class="mt-6 flex flex-col gap-3">
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li class="flex gap-2">
+                  <img src="./imgs/checked.svg" alt="blue check" class="w-5 h-5">
+                  <p class="text-sm font-medium">Lorem ipsum dolor sit amet.</p>
+                </li>
+              </ul>
+            </div>
+            <button class="py-2 px-4 rounded text-slate-50 text-sm bg-slate-800 ">Subscribe to this plan</button>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
