:sparkles: table done

--- a/2. Components/1. Starter files/Tables/index.html
+++ b/2. Components/1. Starter files/Tables/index.html
@@ -7,9 +7,59 @@
   <title>Tables</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-
-
-
+<body class="bg-slate-800">
+  <main class="container px-6 mx-auto">
+    <h1 class="my-10 text-2xl font-medium uppercase text-slate-100 text-center">Most Spoken Languages in the World</h1>
+    <div class="rounded-lg overflow-x-auto">
+      <table class="w-full ring-0 rounded-lg">
+        <thead>
+          <tr class="bg-slate-100">
+            <th class="uppercase font-medium border-r border-r-slate-400  px-2 py-3">Rank</th>
+            <th class="uppercase font-medium border-r border-r-slate-400  px-2 py-3">Language</th>
+            <th class="uppercase font-medium border-r border-r-slate-400  px-2 py-3">Speakers</th>
+            <th class="uppercase font-medium px-2 py-3">Branch</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="odd:bg-slate-300 even:bg-slate-100">
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">1.</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Mandarin Chinese</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">918</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Sinitic</td>
+          </tr>
+          <tr class="odd:bg-slate-300 even:bg-slate-100">
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">2.</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Spanish</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">480</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Romance</td>
+          </tr>
+          <tr class="odd:bg-slate-300 even:bg-slate-100">
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">3.</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">English</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">379</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Germanic</td>
+          </tr>
+          <tr class="odd:bg-slate-300 even:bg-slate-100">
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">4.</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Hindi</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">341</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Indo-Aryan</td>
+          </tr>
+          <tr class="odd:bg-slate-300 even:bg-slate-100">
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">5.</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Bengali</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">300</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Indo-Aryan</td>
+          </tr>
+          <tr class="odd:bg-slate-300 even:bg-slate-100">
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">6.</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Poruguese</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">221</td>
+            <td class="whitespace-nowrap text-lg font-medium border-r border-r-slate-400 px-2 py-3">Romance</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
 </body>
 </html>
