--- a/3. Landing Page/1. Starter Landing Page/index.html
+++ b/3. Landing Page/1. Starter Landing Page/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing page SEO</title>
+    <link rel="stylesheet" href="./dist/main.css"/>
   </head>
-  <body>
-
-
+  <body class="bg-gray-200">
+    <header class="p-4 flex justify-between bg-gray-50 drop-shadow-lg">
+      <a href="/">
+        <img src="ressources/RocketLogo.svg" alt="Logo" class="w-12">
+      </a>
+      <button class="px-2 border border-gray-300 rounded-lg shadow-sm">
+        <img src="ressources/menu.svg" alt="burger menu" class="w-6">
+      </button>
+    </header>
+    <main>
+      <section class="container mx-auto mt-12 px-6 flex flex-col gap-5">
+        <h1 class="text-center text-3xl font-bold uppercase">Faites décoller votre <span class="text-blue-700">Business en ligne</span></h1>
+        <p class="text-center text-gray-700">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis cumque asperiores deserunt incidunt maxime, laudantium possimus eaque ipsa.</p>
+        <div class="flex flex-col gap-5 items-center justify-center">
+          <button class="py-3 min-w-[250px] rounded-lg bg-blue-700 text-sm font-medium text-gray-50 shadow">Commencer 🚀</button>
+          <button class="py-3 min-w-[250px] rounded-lg bg-white text-sm font-medium shadow">Démo 🕹️</button>
+        </div>
+        <a href="#services" class="mt-20 mx-auto w-12 h-12 flex justify-center items-center rounded-full bg-white shadow-lg animate-bounce">
+          <svg class="w-6 h-6 text-violet-500 sm:w-8 sm:h-8" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+            <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+          </svg>
+        </a>
+      </section>
+      <section id="services" class="container mx-auto mt-4 flex flex-col gap-5">
+        <img src="./ressources/hommeTravail.jpg" alt="man working" class="h-96 w-full object-cover">
+      </section>
+    </main>
   </body>
 </html>
