:sparkles: adding some textures to backgrounds

--- a/3. Landing Page/1. Starter Landing Page/index.html
+++ b/3. Landing Page/1. Starter Landing Page/index.html
@@ -29,7 +29,7 @@
           </svg>
         </a>
       </section>
-      <section id="services" class="container mx-auto flex flex-col gap-5">
+      <section id="services" class="flex flex-col gap-5 cta-striper-bg">
         <img src="./ressources/hommeTravail.jpg" alt="man working" class="h-96 w-full object-cover">
         <div class="mt-6 mb-10 mx-16 flex flex-col gap-4 items-center]">
           <h2 class="flex flex-col text-2xl text-center font-extrabold"><span class="uppercase">Passez à l'action</span><span class="text-blue-900">Boostez votre SEO</span></h2>
@@ -121,7 +121,7 @@
           </li>
         </ul>
       </section>
-      <section class="py-10 px-6 flex flex-col gap-8 bg-gradient-to-r from-blue-200 to-purple-300">
+      <section class="py-10 px-6 flex flex-col gap-8 divider-bg bg-gradient-to-r from-blue-200 to-purple-300">
         <h1 class="text-4xl font-bold text-center">Ces entreprises nous font confiance</h1>
         <div class="flex justify-center items-center">
           <img src="./ressources/IBM.png" alt="ibm" class="h-6 w-14 object-contain">
